Convert to svelte, upgrade astro to 1.0.5

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,7 +13,7 @@ a {
   text-decoration: none;
 }
 .header {
-  background-color: #4b158a;
+  background-color: #ff3e00;
   position: fixed;
   z-index: 999;
   height: 55px;
