--- a/src/components/Comment.astro
+++ b/src/components/Comment.astro
@@ -1,5 +1,5 @@
 ---
-import Toggle from "./Toggle";
+import Toggle from "./Toggle.svelte";
 const { comment } = Astro.props;
 ---
 <li class="comment">
