--- a/src/pages/[list].astro
+++ b/src/pages/[list].astro
@@ -4,7 +4,7 @@ import Story from "../components/Story.astro";
 
 import { getStories } from "../lib/api";
 
-const type = Astro.params.stories || "top";
+const type = Astro.params.list || "top";
 const url = new URL(Astro.request.url);
 const page = +(url.searchParams.get("page") || 1);
 const stories = await getStories(type, page);
